--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#686868</color>
+    <color name="dark_gray">#474747</color>
+    <color name="orange">#F49C63</color>
+    <color name="purple">#7E2C61</color>
 </resources>
