--- a/app/src/main/res/drawable/default_edit_text_background.xml
+++ b/app/src/main/res/drawable/default_edit_text_background.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <corners android:radius="2dp" />
-            <stroke android:width="2dp" android:color="#474747" />
+            <stroke android:width="2dp" android:color="@color/dark_gray" />
         </shape>
     </item>
 </selector>
