--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="main_action_button">
         <item name="android:fontFamily">@font/signika_semibold</item>
         <item name="android:textSize">16sp</item>
-        <item name="color">@color/white</item>
+        <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/orange</item>
         <item name="android:width">328dp</item>
         <item name="android:height">40dp</item>
@@ -16,8 +16,20 @@
     <style name="main_action_alternate_button">
         <item name="android:fontFamily">@font/signika_semibold</item>
         <item name="android:textSize">16sp</item>
-        <item name="color">@color/white</item>
+        <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/purple</item>
+        <item name="android:width">328dp</item>
+        <item name="android:height">40dp</item>
+        <item name="cornerRadius">2dp</item>
+    </style>
+
+    <style name="secondary_action_button">
+        <item name="android:fontFamily">@font/signika_semibold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/purple</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="strokeColor">@color/purple</item>
+        <item name="strokeWidth">2dp</item>
         <item name="android:width">328dp</item>
         <item name="android:height">40dp</item>
         <item name="cornerRadius">2dp</item>
