--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#949494</color>
     <color name="gray">#686868</color>
     <color name="dark_gray">#474747</color>
     <color name="orange">#F49C63</color>
