--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,17 @@
         <item name="cornerRadius">2dp</item>
     </style>
 
+    <style name="search_button">
+        <item name="android:drawableTop">@drawable/baseline_search_24</item>
+        <item name="fontFamily">@font/signika</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:width">64dp</item>
+        <item name="android:height">64dp</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
     <style name="default_edit_text">
         <item name="android:padding">8dp</item>
         <item name="android:width">328dp</item>
