--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,16 +8,22 @@
         android:id="@+id/petsup_icon"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/petsup_icon" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/petsup_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/search_button"
         style="@style/vertical_button_with_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/filter_button"
+        android:layout_toStartOf="@id/filter_button"
         android:drawableTop="@drawable/baseline_search_24"
-        android:text="Buscar" />
+        android:text="Buscar"
+        app:layout_constraintEnd_toStartOf="@id/filter_button"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/filter_button"
@@ -25,16 +32,117 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:drawableTop="@drawable/baseline_filter_alt_24"
-        android:text="Filtrar" />
+        android:text="Filtrar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/section_title"
+        style="@style/default_section_title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/default_title_text_view"
-        android:textColor="@color/purple"
-        android:text="Pet shops"
         android:layout_below="@id/petsup_icon"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Pet shops"
+        android:textColor="@color/purple"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/petsup_icon" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pet_shop_card_view_1"
+        style="@style/pet_shop_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="104dp"
+        android:layout_below="@id/section_title"
+        android:layout_marginHorizontal="17dp"
+        android:layout_marginVertical="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/section_title">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/pet_shop_icon_1"
+                android:layout_width="88dp"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="8dp"
+                android:src="@drawable/petshop_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/card_title_1"
+                style="@style/default_title_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="8dp"
+                android:text="Fofinho Pet shop"
+                app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/card_location_1"
+                style="@style/gray_description_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cerqueira César, São Paulo"
+                app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
+                app:layout_constraintTop_toBottomOf="@id/card_title_1" />
+
+            <TextView
+                android:id="@+id/card_services_1"
+                style="@style/gray_description_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/services"
+                app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
+                app:layout_constraintTop_toBottomOf="@id/card_location_1" />
+
+            <TextView
+                android:id="@+id/card_status_1"
+                style="@style/green_description_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/status_open"
+                app:layout_constraintStart_toEndOf="@id/pet_shop_icon_1"
+                app:layout_constraintTop_toBottomOf="@id/card_services_1" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="2dp"
+                android:src="@drawable/star_icon"
+                app:layout_constraintEnd_toStartOf="@id/grade_text_view"
+                app:layout_constraintTop_toTopOf="@id/card_title_1" />
+
+            <TextView
+                android:id="@+id/grade_text_view"
+                style="@style/grade_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="8dp"
+                android:text="4.5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/card_title_1" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/favorite_icon"
+                app:layout_constraintStart_toStartOf="@id/grade_text_view"
+                app:layout_constraintTop_toBottomOf="@id/grade_text_view" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
     <include layout="@layout/bottom_menu" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
