--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,6 +53,11 @@
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
+    <style name="default_section_title_text_view">
+        <item name="fontFamily">@font/signika_semibold</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+
     <style name="default_title_text_view">
         <item name="fontFamily">@font/signika_semibold</item>
         <item name="android:textSize">24sp</item>
@@ -61,5 +66,28 @@
     <style name="default_forms_text_view">
         <item name="fontFamily">@font/signika_semibold</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="gray_description_text_view">
+        <item name="fontFamily">@font/signika</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="green_description_text_view">
+        <item name="fontFamily">@font/signika</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/green</item>
+    </style>
+
+    <style name="grade_text_view">
+        <item name="fontFamily">@font/signika_semibold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/orange</item>
+    </style>
+    
+    <style name="pet_shop_card_view">
+        <item name="cardBackgroundColor">@color/lighter_gray</item>
+        <item name="cardCornerRadius">4dp</item>
     </style>
 </resources>
