--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="light_gray">#949494</color>
     <color name="gray">#686868</color>
     <color name="dark_gray">#474747</color>
+    <color name="darker_gray">#1E1E1E</color>
     <color name="orange">#F49C63</color>
     <color name="purple">#7E2C61</color>
     <color name="green">#56AB78</color>
