--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lighter_gray">#F8F8F8</color>
     <color name="light_gray">#949494</color>
+    <color name="light_gray_opacity_reduced">#33949494</color>
     <color name="gray">#686868</color>
     <color name="dark_gray">#474747</color>
     <color name="darker_gray">#1E1E1E</color>
