--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/orange</item>
-        <item name="android:width">152dp</item>
+        <item name="android:width">176dp</item>
         <item name="android:height">40dp</item>
         <item name="cornerRadius">2dp</item>
     </style>
@@ -52,7 +52,7 @@
         <item name="backgroundTint">@color/white</item>
         <item name="strokeColor">@color/purple</item>
         <item name="strokeWidth">2dp</item>
-        <item name="android:width">152dp</item>
+        <item name="android:width">176dp</item>
         <item name="android:height">40dp</item>
         <item name="cornerRadius">2dp</item>
     </style>
@@ -65,6 +65,19 @@
         <item name="backgroundTint">@color/white</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="content_selection_button">
+        <item name="android:fontFamily">@font/signika_bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="backgroundTint">@color/lighter_gray</item>
+        <item name="strokeColor">@color/light_gray_opacity_reduced</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="android:width">176dp</item>
+        <item name="android:height">40dp</item>
+        <item name="cornerRadius">2dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
     <style name="default_edit_text">
