--- a/app/src/main/res/layout/activity_pet_selection.xml
+++ b/app/src/main/res/layout/activity_pet_selection.xml
@@ -1,78 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/pet_subtitle"
-        style="@style/default_subtitle_text_view"
-        android:layout_width="372dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Para qual pet deseja agendar este serviço?"
-        android:textAlignment="center" />
-
-    <RelativeLayout
-        android:id="@+id/pet_selection_box"
+    <ImageView
+        android:id="@+id/arrow_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/pet_subtitle">
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <Button
-            android:id="@+id/pet_button_1"
-            style="@style/content_selection_button"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/pet_subtitle"
+            style="@style/default_subtitle_text_view"
+            android:layout_width="372dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="Para qual pet deseja agendar este serviço?"
+            android:textAlignment="center" />
+
+        <RelativeLayout
+            android:id="@+id/pet_selection_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:text="Fluffy" />
+            android:layout_below="@id/pet_subtitle">
+
+            <Button
+                android:id="@+id/pet_button_1"
+                style="@style/content_selection_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="Fluffy" />
+
+            <Button
+                android:id="@+id/pet_button_2"
+                style="@style/content_selection_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/pet_button_1"
+                android:text="Kira" />
+
+            <Button
+                android:id="@+id/pet_button_3"
+                style="@style/content_selection_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pet_button_1"
+                android:layout_marginEnd="10dp"
+                android:text="Spike" />
+
+            <Button
+                android:id="@+id/pet_button_4"
+                style="@style/content_selection_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pet_button_2"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/pet_button_1"
+                android:text="Mel" />
+
+        </RelativeLayout>
 
         <Button
-            android:id="@+id/pet_button_2"
-            style="@style/content_selection_button"
+            android:id="@+id/return_button"
+            style="@style/small_secondary_action_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_toEndOf="@id/pet_button_1"
-            android:text="Kira" />
+            android:layout_below="@id/pet_selection_box"
+            android:text="@string/go_back" />
 
         <Button
-            android:id="@+id/pet_button_3"
-            style="@style/content_selection_button"
+            android:id="@+id/continue_button"
+            style="@style/small_main_action_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/pet_button_1"
-            android:layout_marginEnd="10dp"
-            android:text="Spike" />
-
-        <Button
-            android:id="@+id/pet_button_4"
-            style="@style/content_selection_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pet_button_2"
-            android:layout_marginStart="10dp"
-            android:layout_toEndOf="@id/pet_button_1"
-            android:text="Mel" />
+            android:layout_below="@id/pet_selection_box"
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@id/return_button"
+            android:text="@string/go_forward" />
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/return_button"
-        style="@style/small_secondary_action_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/pet_selection_box"
-        android:text="@string/go_back" />
-
-    <Button
-        android:id="@+id/continue_button"
-        style="@style/small_main_action_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/pet_selection_box"
-        android:layout_marginStart="20dp"
-        android:layout_toEndOf="@id/return_button"
-        android:text="@string/go_forward" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
