--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -212,4 +212,10 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/gray</item>
     </style>
+
+    <style name="default_pet_card_title">
+        <item name="fontFamily">@font/signika_bold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
