--- a/app/src/main/res/layout/activity_datetime_selection.xml
+++ b/app/src/main/res/layout/activity_datetime_selection.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/booking_subtitle"
-            android:text="Data" />
+            android:text="@string/date" />
 
         <TextView
             android:id="@+id/time_text_view"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/booking_subtitle"
             android:layout_marginStart="196dp"
-            android:text="Horário" />
+            android:text="@string/time" />
 
         <Button
             android:id="@+id/date_button"
