--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_toStartOf="@id/filter_button"
         android:drawableTop="@drawable/baseline_search_24"
-        android:text="Buscar"
+        android:text="@string/search"
         app:layout_constraintEnd_toStartOf="@id/filter_button"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:drawableTop="@drawable/baseline_filter_alt_24"
-        android:text="Filtrar"
+        android:text="@string/filter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
