--- a/app/src/main/res/layout/activity_pet_list.xml
+++ b/app/src/main/res/layout/activity_pet_list.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
-        android:text="Meus pets"
+        android:text="@string/mypets"
         android:textColor="@color/purple"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/baseline_search_24"
-        android:text="Buscar"
+        android:text="@string/search"
         app:layout_constraintEnd_toStartOf="@id/add_button"
         app:layout_constraintTop_toTopOf="@id/add_button" />
 
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:drawableTop="@drawable/baseline_add_24"
-        android:text="Adicionar"
+        android:text="@string/add_lower_case"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
