--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -218,4 +218,16 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="profile_name_text_view">
+        <item name="fontFamily">@font/signika_bold</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">@color/purple</item>
+    </style>
+
+    <style name="profile_card_title_text_view">
+        <item name="fontFamily">@font/signika_semibold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
