--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,11 +5,9 @@
 
     <ImageView
         android:id="@+id/arrow_back"
+        style="@style/arrow_back_style"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/arrow_back" />
+        android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/petsup_icon"
