--- a/app/src/main/res/layout/activity_pet_name.xml
+++ b/app/src/main/res/layout/activity_pet_name.xml
@@ -6,11 +6,9 @@
 
     <ImageView
         android:id="@+id/arrow_back"
+        style="@style/arrow_back_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
