--- a/app/src/main/res/layout/activity_booking_error.xml
+++ b/app/src/main/res/layout/activity_booking_error.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/arrow_back"
+        style="@style/arrow_back_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ImageView
         android:id="@+id/close_button"
         style="@style/close_icon_style"
         android:layout_width="50dp"
@@ -17,27 +23,35 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/success_icon"
+            android:id="@+id/error_icon"
             style="@style/booking_closing_icon"
             android:layout_width="176dp"
             android:layout_height="176dp"
-            android:src="@drawable/baseline_check_circle_outline_24" />
+            android:src="@drawable/cancel_icon" />
 
         <TextView
             android:id="@+id/message"
             style="@style/empty_pet_list_text_view"
-            android:layout_width="250dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Agendamento realizado com sucesso!"
+            android:text="Ocorreu um erro inesperado. Por favor, tente novamente em alguns instantes."
             android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/retry_button"
+            style="@style/main_action_alternate_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/retry" />
 
         <Button
             android:id="@+id/return_button"
             style="@style/secondary_action_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:text="@string/back_to_start" />
 
     </LinearLayout>
